# HW3D-triangles

./: .gitignore  2D_figures.cpp  2D_figures.hpp  3D_operations_test.cpp  CMakeCache.txt  CMakeLists.txt  GEO_2D_figures.cpp  GEO_2D_figures.hpp  GEO_2D_operations.cpp  GEO_2D_operations.hpp  GEO_2D_operations_test.cpp  GEO_3D_operations_test.cpp  Makefile  README.md  cmake_install.cmake  figures.cpp  figures.hpp  geometric_operations.cpp  geometric_operations.hpp  intersection.cpp  intersection.hpp  main.cpp  main_2D.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
